--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@
 	clear: both;
 }
 
+.waves {
+	max-width: 81px;
+}
+
 section {
 	height: 700px;
 }
@@ -31,11 +35,15 @@ section.home {
 	width: 100%;
 }
 
+.home_content {
+	border: 2px solid white;
+	margin-top: 120px;
+}
+
 .home_menu {
 	margin: -60px auto 80px;
 	
 }
-
 
 .home_logo {
 	font-family: Bringin;
@@ -77,7 +85,7 @@ h4 {
 .call {
 	position: absolute;
 	right: 0;
-	top: 0;
+	top: -5px;
 	width: 153px;
 	height: 46px;
 	border: 3px solid #36aeea;
@@ -100,10 +108,6 @@ h4 {
 	color: white;
 }
 
-
-.home_content {
-    border: 3px solid white;
-}
 
 .home_title {
 	width: 50%;
@@ -298,7 +302,7 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.*/
 /*ORDER SECTION*/
 
 .order {
-	background: url('../pics/rectangle-53.png') no-repeat center;
+	background: url('../img/background-mount.jpg') no-repeat center;
 	width: 100%;
 	height: 700px;
 
@@ -349,8 +353,166 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.*/
 
 /*PRICE SECTION*/
 
+section.price {
+	background: url('../img/worldmap-dots.png') no-repeat center;
+	height: 1000px;
+}
+
+.price_title {
+	font-size: 30px;
+	font-weight: bold;
+	text-align: center;
+	text-transform: uppercase;
+	color: #2c2e37;
+	font-family: OpenSans Bold;
+	line-height: 43px;
+	padding: 80px;
+}
+
+.price_list {
+	margin: auto;
+}
+
+.price_item {
+	display: inline-block;
+	width: 17%;
+	margin: 15px;	
+}
+
+.price_down {
+	margin-top: -290px;
+}
+
+
 /*GALLERY SECTION*/
 
+section.gallery {
+	height: 1000px;
+}
+	
+.gallery_title {
+	font-size: 30px;
+	font-weight: bold;
+	text-align: center;
+	text-transform: uppercase;
+	color: #2c2e37;
+	font-family: OpenSans Bold;
+	line-height: 43px;
+	padding: 80px;
+	margin-top: 80px;
+}
+
+.gallery_list {
+	margin: 40px auto;
+}
+
+.gallery-item {
+	display: inline-block;
+}
+
+.gallery-block1 {
+	max-width: 263px;
+	margin-right: 15px;
+}
+
+.gallery-block2 {
+	max-width: 361px;
+	margin-right: 15px;
+}
+
+.gallery-block3 {
+	max-width: 457px;
+}
+
+.gallery-item-img1,
+.gallery-item-img4 {
+	max-width: 260px;
+}
+
+.gallery-item-img2,
+.gallery-item-img5 {
+	max-width: 355px;
+}
+
+.gallery-item-img3,
+.gallery-item-img6 {
+	max-width: 450px;
+}
+
+.gallery-item-img1,
+.gallery-item-img2,
+.gallery-item-img3 {
+	margin-bottom: 15px;
+}
+
+
+
+
+
+
+
 /*CLIENTS SECTION*/
+section.clients {
+	background-color: #f8f9fa;
+	height: 180px; 
+}
+
+.clients_list {
+	height: 180px;
+	margin: auto;
+}
+
+.clients_item {
+	display: inline-block;
+	max-width: 80px;
+    margin: 55px;
+}
+
+
+
+
+
 
 /*CONTACTS SECTION*/
+
+section.contacts {
+	background: url('../img/group-7-copy-2.png') no-repeat;
+}
+
+
+.clients_title {
+	font-size: 30px;
+	font-weight: bold;
+	text-align: center;
+	text-transform: uppercase;
+	color: #2c2e37;
+	font-family: OpenSans Bold;
+	line-height: 43px;
+	padding: 80px;
+	margin-top: 30px;
+	margin-bottom: 30px;
+}
+
+.clients-say-item {
+	display: inline-block;
+	width: 48%;
+}
+
+.clients-text {
+	color: #adadad;
+	font-size: 18px;
+	font-family: OpenSans Regular;
+	line-height: 33px;
+	margin-bottom: 20px;
+}
+
+.clients-foto {
+	max-width: 65px;
+	float: left;
+	margin: 0 5px;
+}
+
+.clients-say-name {
+	color: #36aeea;
+}
+
