--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ h4 {
 }
 
 .call:active {
-	border: 3px solid white;
+	border: 3px solid #446CB3;
 }
 
 .menu-button {
@@ -105,7 +105,7 @@ h4 {
 }
 
 .menu-button:active {
-	color: white;
+	color: #446CB3;
 }
 
 
@@ -158,12 +158,6 @@ margin: 30px 0;
 }
 
 
-/* Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat.  in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.*/
 
 /*ABOUT SECTION*/
 
@@ -263,13 +257,12 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.*/
 
 .journal_list {
 	-webkit-box-sizing: border-box;
-	   -moz-box-sizing: border-box;
-	        box-sizing: border-box;
+	-moz-box-sizing: border-box;
 	overflow: hidden;
 	height: 750px;
 	margin: auto;
 	-webkit-box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.2);
-	        box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.2);
+	-moz-box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.2);
 	
 }
 
@@ -411,16 +404,40 @@ section.service {
 
 }
 
+.dotted-shape {
+width: 832px;
+height: 119px;
+border-top: 5.53px dashed #f0f3f6;
+border-left: 5.53px dashed #f0f3f6;
+border-right: 5.53px dashed #f0f3f6;
+    position: absolute;
+    left: 140px;
+    top: 270px;
+    z-index: 1;
+}
+
+.dotted-lines {
+       width: 273px;
+    height: 119px;
+    border-left: 5.53px dashed #f0f3f6;
+    border-right: 5.53px dashed #f0f3f6;
+    position: absolute;
+    left: 275px;
+    top: 0px;
+    z-index: 1;
+}
+
 .service_list {
 	margin: 30px auto;
-	text-align: center;
+	
 	
 }
 
 .service_item {
 	float: left;
-	max-width: 200px;
+	max-width: 250px;
 	text-align: center;
+	margin: 15px;
 	
 }
 
@@ -431,20 +448,68 @@ section.service {
 	-webkit-border-radius: 100%;
 	        border-radius: 100%;
 	color: #36aeea;
-	width: 20px;
-	height: 20px;
+	width: 25px;
+	height: 25px;
 	margin: 5px auto;
 	padding: 5px;
+	text-align: center;
+	
+}
+
+ img.service_icon_2{
+	width: 50px;
+    margin: 60px auto;
+}
+
+
+.service-polygon {
+	width: 100px;
+	height: 55px;
+	background: white;
+	position: relative;
+	-webkit-border-radius: 2px;
+	        border-radius: 2px;
+	
+}
+.service-polygon:before {
+	content: "";
+	position: absolute;
+	top: -25px; 
+	left: 0;
+	width: 0;
+	height: 0;
+	border-left: 50px solid transparent;
+	border-right: 50px solid transparent;
+	border-bottom: 25px solid white;
+	-webkit-border-radius: 3px;
+	        border-radius: 3px;
+	
+}
+.service-polygon:after {
+	content: "";
+	position: absolute;
+	bottom: -25px; 
+	left: 0;
+	width: 0;
+	height: 0;
+	border-left: 50px solid transparent;
+	border-right: 50px solid transparent;
+	border-top: 25px solid white;
+	-webkit-border-radius: 3px;
+	        border-radius: 3px;
 }
 
 
 .service-icon {
 	background-color: #f0f3f6;
-	max-width: 50px;
-	height: 50px;
+	width: 200px;
+	height: 200px;
 	-webkit-border-radius: 100%;
 	        border-radius: 100%;
+	
 }
+
+
 
 
 
@@ -487,6 +552,11 @@ section.price {
 .price_down {
 	margin-top: -290px;
 }
+
+
+
+
+
 
 
 /*GALLERY SECTION*/
@@ -553,7 +623,7 @@ section.gallery {
 .gallery-item-img1,
 .gallery-item-img2,
 .gallery-item-img3 {
-	margin-bottom: 15px;
+	margin-bottom: 20px;
 }
 
 
@@ -645,13 +715,17 @@ section.contacts .container {
 }
 
 .contacts_form {
+	position: relative;
 	margin: -50px auto;
     max-width: 514px;
     height: 496px;
+    background-color: #DCDCDC;
     background: url('../pics/blur.png') no-repeat center;
+    opacity: 0.99;
     -webkit-border-radius: 8px;
             border-radius: 8px;
     box-shadow: 0 5px 51px rgba(0, 0, 0, 0.75);
+  
    
     
 }
@@ -663,6 +737,7 @@ section.contacts .container {
 	text-align: center;
 	text-transform: uppercase;
 	padding: 10px;
+	
 }
 
 .contacts-form-text {
@@ -671,6 +746,7 @@ section.contacts .container {
 	font-size: 16px;
 	text-align: center;
 	padding: 10px;
+	
 }
 
 input {
@@ -680,6 +756,7 @@ input {
 	color: #ccc;
     font-family: Roboto Regular;
     font-size: 18px;
+    z
 }
 
 .contacts-form-item {
@@ -690,6 +767,7 @@ input {
 	border-radius: 4px;
 	padding: 7px 5px;
 	margin: 15px auto;
+	
 
 }
 
