--- a/css/style.css
+++ b/css/style.css
@@ -32,8 +32,7 @@ button {
 
 section.home {
 	background: url('../img/background-image-copy.jpg');
-	width: 100%;
-	z-index: 1;
+	max-width: 100%;
 }
 
 .home_content {
@@ -571,7 +570,7 @@ section.gallery {
 	margin: 40px auto;
 }
 
-.gallery-item {
+.gallery-responsive-item {
 	display: inline-block;
 	position: relative;
 }
@@ -639,6 +638,51 @@ section.gallery {
 
 
 
+@media screen and (max-width: 992px) {
+    
+    .gallery-responsive.__col-3 .gallery-responsive-item {
+        width: 50%;
+        margin: 10px auto;
+    }
+
+    .gallery-item-img3,
+	.gallery-item-img6 {
+		display: none;
+	}
+
+}
+
+
+@media screen and (max-width: 768px) {
+    
+    .gallery-responsive.__col-3 .gallery-responsive-item {
+        width: 100%;
+        margin: 10px auto;
+    }
+
+     .gallery-item-img3,
+	.gallery-item-img6 {
+		display: none;
+	}
+
+}
+
+@media screen and (max-width: 380px) {
+	.gallery-responsive.__col-3 .gallery-responsive-item {
+        width: 100%;
+        margin: 10px auto;
+    }
+
+     .gallery-item-img3,
+	.gallery-item-img6 {
+		display: none;
+	}
+
+	.gallery-item-img2,
+	.gallery-item-img5 {
+		display: none;
+	}
+}
 
 
 
