--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,7 @@ h4 {
 }
 
 .home_order {
-width: 253px;
+max-width: 253px;
 height: 60px;
 background-color: #36aeea;
 border-radius: 4px;
@@ -149,7 +149,7 @@ margin: 30px 0;
 }
 
 .order-button {
-	width: 103px;
+	max-width: 103px;
 	height: 10px;
 	color: white;
 	font-family: Raleway Regular;
@@ -159,6 +159,34 @@ margin: 30px 0;
 	text-transform: uppercase;
 }
 
+
+@media screen and (max-width: 992px) {
+	.container {
+	 max-width: 992px;
+	}
+
+	.home_menu {
+		margin-top: -100px 0 80px;
+	}
+
+	.menu-item {
+		font-size: 10px;
+		padding: 5px 10px;
+	}
+
+	.order-button {
+		max-width: 80px;
+		height: 8px;
+		font-size: 12px;
+		line-height: 40px;
+	}
+
+	.call {
+		max-width: 140px;
+	    height: 36px;
+	}
+
+}
 
 
 /*ABOUT SECTION*/
@@ -492,8 +520,18 @@ border-right: 5.53px dashed #f0f3f6;
 	margin: 80px auto;
 	}
 
+.service-item-title {
+	color: #2c2e37;
+	font-size: 18px;
+	margin-top: 100px;
+	font-style: Roboto Regular;
+}
 
 
+.service-text {
+	margin: 150px 10px;
+	font-size: 16px;
+}
 
 
 
