--- a/css/style.css
+++ b/css/style.css
@@ -22,10 +22,6 @@
 	max-width: 81px;
 }
 
-section {
-	height: 700px;
-}
-
 button {
 	font-family: Raleway Regular;
 }
@@ -33,10 +29,10 @@ button {
 section.home {
 	background: url('../img/background-image-copy.jpg');
 	max-width: 100%;
+	z-index: -1;
 }
 
 .home_content {
-	border: 2px solid white;
 	margin-top: 120px;
 }
 
@@ -160,65 +156,6 @@ margin: 30px 0;
 }
 
 
-@media screen and (max-width: 992px) {
-	.container {
-	 width: 992px;
-	}
-
-	.home_menu {
-		margin-top: -100px 0 80px;
-	}
-
-	.menu-item {
-		font-size: 10px;
-		padding: 5px 10px;
-	}
-
-	.order-button {
-		width: 80px;
-		height: 8px;
-		font-size: 12px;
-		line-height: 40px;
-	}
-
-	.call {
-		width: 140px;
-	    height: 30px;
-	}
-
-	.title {
-		font-size: 40px;
-	}
-
-	.logo-home {
-		font-size: 55px;
-	}
-
-}
-
-@media screen and (max-width: 780px) {
-	.order-button {
-		width: 60px;
-		height: 8px;
-		font-size: 10px;
-		line-height: 40px;
-	}
-
-	.call {
-		width: 120px;
-	    height: 26px;
-	}
-
-	.title {
-		font-size: 30px;
-	}
-
-	.logo-home {
-		font-size: 45px;
-	}
-
-
-}
 
 
 /*ABOUT SECTION*/
@@ -239,6 +176,10 @@ margin: 30px 0;
 .waves-about .waves {
 	position: absolute;
 	top: 150px;
+}
+
+.about_list {
+	padding: 120px 0 200px;
 }
 
 .about_title {
@@ -382,6 +323,10 @@ section.order {
 	background: url('../img/background-mount.jpg') no-repeat center;
 }
 
+.order > .container {
+	    padding-bottom: 50px;
+}
+
 .waves-order .waves {
 	position: absolute;
 	top: 140px;
@@ -469,9 +414,6 @@ section.order {
 
 /*SERVICE SECTION*/
 
-section.service {
-	height: 700px;
-}
 
 .waves-service .waves {
 	position: absolute;
@@ -491,40 +433,51 @@ section.service {
 
 }
 
-.dotted-shape {
-width: 832px;
-height: 119px;
-border-top: 5.53px dashed #f0f3f6;
-border-left: 5.53px dashed #f0f3f6;
-border-right: 5.53px dashed #f0f3f6;
-    position: absolute;
-    left: 140px;
-    top: 270px;
-    z-index: 1;
+
+.service_list {
+	margin: auto;
+    position: relative;
+    font-size: 0;
+		
 }
 
-.dotted-lines {
-       width: 273px;
-    height: 119px;
+.service_list:before {
+	border-top: 5.53px dashed #f0f3f6;
     border-left: 5.53px dashed #f0f3f6;
     border-right: 5.53px dashed #f0f3f6;
     position: absolute;
-    left: 275px;
-    top: 0px;
-    z-index: 1;
+    left: 12.5%;
+    right: 12.5%;
+    top: 25px;
+    bottom: 50%;
+    margin-left: -2px;
+    margin-right: -2px;
+    z-index: -1;
+    content: '';
+    opacity: 0.7;
 }
 
-.service_list {
-	margin: 30px auto;
-	
+.service_list:after{
+	border-left: 5.53px dashed #f0f3f6;
+    border-right: 5.53px dashed #f0f3f6;
+    position: absolute;
+    left: 37.5%;
+    right: 37.5%;
+    top: 25px;
+    bottom: 50%;
+    z-index: -1;
+    margin-left: -2px;
+    margin-right: -2px;
+    content: '';
+    opacity: 0.7;
 	
 }
 
 .service_item {
-	float: left;
-	max-width: 250px;
-	text-align: center;
-	margin: 15px 50px;
+    display: inline-block;
+    text-align: center;
+    margin: 0 2.5%;
+    width: 20%;
 	
 }
 
@@ -532,37 +485,51 @@ border-right: 5.53px dashed #f0f3f6;
 
 .service_number {
 	border: 3px solid #36aeea;
-	-webkit-border-radius: 100%;
-	        border-radius: 100%;
-	color: #36aeea;
-	width: 25px;
-	height: 25px;
-	margin: 5px auto;
-	padding: 5px;
-	text-align: center;
+    -webkit-border-radius: 100%;
+    border-radius: 100%;
+    color: #36aeea;
+    width: 25px;
+    height: 25px;
+    line-height: 25px;
+    margin: 5px auto;
+    padding: 5px;
+    text-align: center;
+    position: relative;
+    z-index: 10;
+    font-size: 16px;
 	
 }
 
-.service-icon {
-	background-color: #f0f3f6;
-	width: 179px;
-	height: 179px;
-	-webkit-border-radius: 100%;
-	        border-radius: 100%;
-	margin: 80px auto;
-	}
+ .service_icon_2 {
+	width: 50%;
+    position: relative;
+    margin: 80px auto 0;
+    border-radius: 50%;
+    background: #dee0e3;
+    padding-top: 50%;
+    
+   }
 
 .service-item-title {
 	color: #2c2e37;
 	font-size: 18px;
-	margin-top: 120px;
-	font-style: Roboto Regular;
+	margin-top: 130px;
+	font-family: Roboto Bold;
+	font-weight: bold;
+}
+
+.service_icon_img {
+	position: absolute;
+    top: 9.5%;
+    left: 9.5%;
+    width: 80%;
 }
 
 
 .service-text {
-	margin: 10px 10px;
+	padding: 10px 10px;
 	font-size: 16px;
+	font-family: Roboto Regular;
 }
 
 
@@ -572,7 +539,12 @@ border-right: 5.53px dashed #f0f3f6;
 
 section.price {
 	background: url('../img/worldmap-dots.png') no-repeat center;
-	height: 1000px;
+	position: relative;
+	z-index: 100;
+}
+
+.price > .container {
+	margin-top: 70px;
 }
 
 .price-waves .waves {
@@ -606,6 +578,11 @@ section.price {
 	margin-top: -290px;
 }
 
+.price_down_img {
+	position: relative;
+	z-index: -3;
+}
+
 
 
 
@@ -615,7 +592,7 @@ section.price {
 /*GALLERY SECTION*/
 
 section.gallery {
-	height: 1000px;
+	margin: 0px auto 50px;
 }
 
 .waves-gallery .waves {
@@ -633,7 +610,6 @@ section.gallery {
 	font-family: OpenSans Bold;
 	line-height: 43px;
 	padding: 80px;
-	margin-top: 80px;
 }
 
 .gallery_list {
@@ -708,51 +684,7 @@ section.gallery {
 
 
 
-@media screen and (max-width: 992px) {
-    
-    .gallery-responsive.__col-3 .gallery-responsive-item {
-        width: 50%;
-        margin: 10px auto;
-    }
 
-    .gallery-item-img3,
-	.gallery-item-img6 {
-		display: none;
-	}
-
-}
-
-
-@media screen and (max-width: 768px) {
-    
-    .gallery-responsive.__col-3 .gallery-responsive-item {
-        width: 100%;
-        margin: 10px auto;
-    }
-
-     .gallery-item-img3,
-	.gallery-item-img6 {
-		display: none;
-	}
-
-}
-
-@media screen and (max-width: 380px) {
-	.gallery-responsive.__col-3 .gallery-responsive-item {
-        width: 100%;
-        margin: 10px auto;
-    }
-
-     .gallery-item-img3,
-	.gallery-item-img6 {
-		display: none;
-	}
-
-	.gallery-item-img2,
-	.gallery-item-img5 {
-		display: none;
-	}
-}
 
 
 
@@ -780,10 +712,6 @@ section.clients {
 
 
 /*CONTACTS SECTION*/
-
-section.reviews {
-	height: 150px;
-}
 
 .waves-reviews .waves {
 	position: absolute;
@@ -827,33 +755,38 @@ section.reviews {
 	color: #36aeea;
 }
 
+.reviews-shadow {
+	
+}
+
 /* Contacts form */
 section.contacts {
 	background: url('../img/group-7-copy-2.png') no-repeat;
-	height: 950px;
-}
-
-section.contacts .container {
-	padding-top: 420px;
-	padding-bottom: 450px;
-	margin: auto;
+	padding: 100px 0;
+	background-attachment: fixed;
 }
 
 .contacts_form {
 	position: relative;
 	margin: -50px auto;
     max-width: 514px;
-    height: 496px;
-    background-color: #DCDCDC;
-    background: url('../pics/blur.png') no-repeat center;
-    opacity: 0.99;
-    -webkit-border-radius: 8px;
-            border-radius: 8px;
-    box-shadow: 0 5px 51px rgba(0, 0, 0, 0.75);
-  
-   
-    
-}
+    z-index: 100;
+        box-shadow: 0 5px 51px rgba(0, 0, 0, 0.3);
+    border-radius: 8px;
+    }
+
+ .login-form:before {
+ 	content: '';
+    background: url("../img/group-7-copy-2.png") no-repeat;
+    background-attachment: fixed;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+   z-index: -1;
+    filter: blur(5px);
+ }
 
 .contacts-form-title {
 	color: #36aeea;
