--- a/css/style.css
+++ b/css/style.css
@@ -572,6 +572,7 @@ section.price {
 	display: inline-block;
 	width: 17%;
 	margin: 15px;	
+	visibility: hidden;
 }
 
 .price_down {
@@ -582,11 +583,6 @@ section.price {
 	position: relative;
 	z-index: -3;
 }
-
-
-
-
-
 
 
 /*GALLERY SECTION*/
@@ -702,9 +698,10 @@ section.clients {
 
 .clients_item {
 	display: inline-block;
-	max-width: 90px;
-    margin: 55px;
-}
+	width: 8%;
+    margin: 46px;
+ 
+ }
 
 
 
@@ -712,6 +709,9 @@ section.clients {
 
 
 /*CONTACTS SECTION*/
+section.reviews {
+	margin-bottom: 55px;
+}
 
 .waves-reviews .waves {
 	position: absolute;
@@ -737,41 +737,44 @@ section.clients {
 	width: 48%;
 }
 
+.clients-say-sign {
+	font-size: 60px;
+	color: #bcbcbc;
+}
+
 .clients-text {
 	color: #adadad;
 	font-size: 18px;
 	font-family: OpenSans Regular;
 	line-height: 33px;
-	margin-bottom: 20px;
+	margin-bottom: 30px;
 }
 
 .clients-foto {
-	max-width: 65px;
+	width: 13%;
 	float: left;
-	margin: 0 5px;
+	margin: -20px 10px;
 }
 
 .clients-say-name {
 	color: #36aeea;
 }
 
-.reviews-shadow {
-	
-}
+
 
 /* Contacts form */
 section.contacts {
 	background: url('../img/group-7-copy-2.png') no-repeat;
-	padding: 100px 0;
+	padding: 200px 0;
 	background-attachment: fixed;
 }
 
 .contacts_form {
 	position: relative;
 	margin: -50px auto;
-    max-width: 514px;
+    width: 38%;
     z-index: 100;
-        box-shadow: 0 5px 51px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 5px 51px rgba(0, 0, 0, 0.3);
     border-radius: 8px;
     }
 
@@ -819,7 +822,7 @@ input {
 
 .contacts-form-item {
 	max-width: 450px;
-	height: 60px;
+	height: 55px;
 	background-color: white;
 	border: 3px solid white;
 	border-radius: 4px;
@@ -829,12 +832,14 @@ input {
 
 }
 
-.home_order.contacts-button {
-	margin: 15px auto;
-	max-width: 450px;
-	height: 60px;
-}
+.contacts-button {
+	max-width: 465px;
+    height: 70px;
+    margin: 5px 22px 20px;
+	background-color: #36aeea;
+	border-radius: 4px;
 
+}
 
 /*FOOTER SECTION*/
 
@@ -845,15 +850,14 @@ footer {
 
 .footer_item {
 	display: inline-block;
-	max-width: 500px;
-	margin: 20px 100px;
+	width: 25%;
+    margin: 2% 4%;
 }
 
 .footer-logo-box {
 	display: inline-block;
-	width: 45px;
-	height: 45px;
-	margin: 5px;
+	width: 28%;
+	margin: 2%;
 }
 
 .footer-text {
