--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ section.home {
 }
 
 .home_menu {
-	margin: -60px auto 80px;
+	margin: -50px auto 80px;
 	
 }
 
@@ -239,9 +239,8 @@ margin: 30px 0;
 /*JOURNAL SECTION*/
 
 .journal {
-	height: 1000px;
+	margin-bottom: 50px;
 }
-
 .waves-journal .waves{
 	position: absolute;
 	top: 50px;
@@ -264,7 +263,6 @@ margin: 30px 0;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	overflow: hidden;
-	height: 750px;
 	margin: auto;
 	-webkit-box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.2);
 	-moz-box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.2);
@@ -273,10 +271,9 @@ margin: 30px 0;
 
 .journal_item {
 	display: inline-block;
-	max-width: 374px;
+	max-width: 33.1%;
 	text-align: center;
 	vertical-align: top;
-	box-sizing: border-box;
 }
 
 .item_title {
@@ -284,7 +281,7 @@ margin: 30px 0;
 	font-size: 12px;
 	text-transform: uppercase;
 	font-family: OpenSans Bold;
-	padding: 30px;
+	padding: 25px;
 		
 }
 
@@ -294,7 +291,7 @@ margin: 30px 0;
 	color: #212121;
 	text-transform: uppercase;
 	text-align: center;
-	padding: 30px;
+	padding: 25px;
 }
 
 .journal-item-text {
@@ -303,7 +300,7 @@ margin: 30px 0;
 	font-size: 15px;
 	text-align: center;
 	line-height: 24px;
-	padding: 30px;
+	padding: 25px;
 }
 
 .journal-number {
@@ -572,7 +569,6 @@ section.price {
 	display: inline-block;
 	width: 17%;
 	margin: 15px;	
-	visibility: hidden;
 }
 
 .price_down {
@@ -617,59 +613,18 @@ section.gallery {
 	position: relative;
 }
 
-.gallery_list > li > img {
-	transition: .1s transform;
-  	transform: translateZ(0);
- }
-
- .gallery > li:hover {
-  z-index: 1;
-}
-
-.gallery > li:hover > img {
-  transform: scale(1.7,1.7);
-  transition: .3s transform;
-}
-
-.gallery_animation:before, .gallery_animation:after {
-  display: table;
-  content: "";
-  line-height: 0;
-}
-
-.gallery_animation:after {
-  clear: both;
-}
-
-
-
 .gallery-block1 {
-	max-width: 263px;
+	width: 22.4%;
 	margin-right: 15px;
 }
 
 .gallery-block2 {
-	max-width: 361px;
+	width: 30.8%;
 	margin-right: 15px;
 }
 
 .gallery-block3 {
-	max-width: 457px;
-}
-
-.gallery-item-img1,
-.gallery-item-img4 {
-	max-width: 260px;
-}
-
-.gallery-item-img2,
-.gallery-item-img5 {
-	max-width: 355px;
-}
-
-.gallery-item-img3,
-.gallery-item-img6 {
-	max-width: 450px;
+	width: 39%;
 }
 
 .gallery-item-img1,
@@ -677,6 +632,8 @@ section.gallery {
 .gallery-item-img3 {
 	margin-bottom: 20px;
 }
+
+
 
 
 
@@ -765,6 +722,7 @@ section.reviews {
 /* Contacts form */
 section.contacts {
 	background: url('../img/group-7-copy-2.png') no-repeat;
+	width: 100%;
 	padding: 200px 0;
 	background-attachment: fixed;
 }
@@ -772,7 +730,7 @@ section.contacts {
 .contacts_form {
 	position: relative;
 	margin: -50px auto;
-    width: 38%;
+    width: 30%;
     z-index: 100;
     box-shadow: 0 5px 51px rgba(0, 0, 0, 0.3);
     border-radius: 8px;
@@ -817,25 +775,24 @@ input {
 	color: #ccc;
     font-family: Roboto Regular;
     font-size: 18px;
-    z
 }
 
 .contacts-form-item {
-	max-width: 450px;
+	width: 80%;
 	height: 55px;
 	background-color: white;
 	border: 3px solid white;
 	border-radius: 4px;
 	padding: 7px 5px;
-	margin: 15px auto;
+	margin: 4% auto;
 	
 
 }
 
 .contacts-button {
-	max-width: 465px;
+	width: 84%;
     height: 70px;
-    margin: 5px 22px 20px;
+    margin: 5px 8% 20px;
 	background-color: #36aeea;
 	border-radius: 4px;
 
